css/style.css
/* ... */
.cl_site_section_header .threebarnav {
    display:none;

}

#CL_newuser_introvideo_modal{
    position:fixed; 
    display: none;
    z-index: 101;
    
    
    left:25%;
    width:50%;
    min-width: 300px;
    
    
    background:#f4f4f4;
    border: 1px solid red;

}

#CL_contactinfo_confirmation_modal {
    position:fixed; 
    display: none;
    z-index: 101;
    
    left:25%;
    width:50%;
    min-width: 300px;  
    
    background:#f4f4f4;
    border: 1px solid red;

}


.CL_small_reminder_banner {

    position:fixed; 
    display: none;
    z-index: 111;
    
    top:0;
    left:20%;
    width:60%;
    min-width: 300px;  

    padding-top: 8px;
    
    background:#A31201;
    border: 1px solid #6F120A;

}

.CL_small_reminder_banner p, .CL_small_reminder_banner a {
    font-size: 10px;
    color: white;
}


/* At under 768px,   */
@media screen and (max-width: 768px){

            /*change to the dark "mobile" header */
            .cl_site_section_header {
                background-color: #303032;
                background-image: url("../res/crowdluv-mobile-logo.jpg");
                background-position: center center;
                background-repeat: no-repeat;
                height: 45px;
                min-height:45px;
                position: fixed;
                width:100%;
                z-index: 110;
                padding-top: 4.5px;

            }
            /*Add padding to the top of the #content div to push it down below the sticky header/nav bar*/
            #content {
                padding-top:45px;
            }
            /*show the 3-bar navicon */
            .cl_site_section_header .threebarnav {
                display:inline-block;
                float:left;
                clear:both;

            }
            /* adjust display of navigation from across the top to being a drop-down*/
            .cl_site_section_header #cl_nav {
                display: none;
                float:left;
                clear:both;
                z-index: 10;
                background-color:#3B393C;
                color:white;   
                position:relative; 
                top:5px;
                left:-7px;
                
                border: 1px solid black;

            }
            .cl_site_section_header #cl_nav li {
                float: none;
                color: white;   
                border: 1px solid black;
                             
            }
            .cl_site_section_header #cl_nav li a {
                color:white;   
            }
            .cl_site_section_header #cl_nav li a:hover {
                background-color: red;
            }
           
                
            /*Adjust the link on the header banner logos for small-screen*/
            .cl_site_section_header #cl_header_link {
                
                height:35px;
                min-width:200px;
                width:50%;
                left:20%;
                
            }
        
            /* Change the full page wrapper to be full screen */
            .CL_fullpagewrapper {
                width: 100%;
                
                background:#f4f4f4; /*#f0eeed;*/
                /*margin-left:auto;*/
                /*margin-right:auto;*/
                margin-top: 0px;    
                /*margin-bottom: 2.777%;*/
                margin:0px;
                padding: 0px 0px 1px 0px;    /*  25/900px   */
                border-radius:8px;
            }


            #CL_newuser_introvideo_modal {
                             
                top:50px;
                left:10%;
                width:80%;
                min-width: 300px;
                height:310px;
                
                background:#f4f4f4;
                border: 1px solid red;

            }
            #CL_newuser_introvideo_modal h1{
                font-size:20px;
            }
            
            #CL_contactinfo_confirmation_modal {
                             
                top:50px;
                left:10%;
                width:80%;
                min-width: 300px;
                
                
                background:#f4f4f4;
                border: 1px solid red;

            }
            #CL_contactinfo_confirmation_modal h1{
                font-size:20px;
            }


}   /* end of Under 768px media query */



#content {
    min-height: 600px; 
    background: #f0eeed;
    width:100%;
    margin-left:0;
    margin-right:0;
    padding-bottom: 10px;

    /*clear: both;*/

}

.crowdluvsection {

    /*display: inline-block;  */
    color: #383839;
    padding: .555%;
    vertical-align: top;
    
}


.crowdluvsection h1 {
    font-weight: bold;
    font-size: 16px;
    margin: .222%;
}
h1.cl-major-heading{
    font-weight: bold;
    font-size: 20px;
    margin: .222%;
    
}
.crowdluvsection h2 {
    font-weight: bold;
    font-size: 13px;
    margin: .222%;
}
.crowdluvsection h3 {
    font-weight: bold;
    font-size: 12px;
    margin: .222%;
}
.crowdluvsection p {
    font-size: 12px;
    margin: .222%;

}
.crowdluvsection p2 {
    font-size: 10px;
    margin: .222%;
    line-height: 1;
    display:block;

}

.clwhitebg {
    border: 1px solid #E7E5E6;
    background: #fff;
    border-radius: 2px;
    padding-top: 8px;

}
.cl_graybackground {
    background-color: #f4f4f4;
}
.cl_grayborder {
    border: 1px solid #E7E5E6;
}
.cl_darkgraybackground {
    background-color: #3B393C;
    color: white;

}


#CL_landingpage_jumbotron {
    
    min-height:250px;
    margin-bottom: 2.77%;    /* ~ 25px  */
   /* width:100%; /* padding: 2%; */
    padding-top:2%;
    background-image: url("../res/concert-audience-stock1214.jpg");
    background-repeat: no-repeat;
    background-position: center center;
    background-size: cover;
    /*background-attachment: fixed;*/


}
#CL_landingpage_jumbotron img {
   
    height:215px;
    margin: 0 auto;
    
}
/* ... */

